# flexcity-techtest

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
flexcity_techtest/: asgi.py  settings.py  urls.py  wsgi.py
flexcity_techtest/activation/: admin.py  api.py  apps.py  models.py  schemas.py
flexcity_techtest/activation/business/: greedy.py  knapsack_solver.py  strategy.py
flexcity_techtest/activation/management/commands/: generate_assets.py
flexcity_techtest/activation/migrations/: 0001_initial.py  0002_availability.py  0003_alter_asset_code_alter_asset_name.py  0004_alter_asset_code.py
postman_collection/: Flexcity technical test.postman_collection.json
tests/: test_api.py  test_greedy.py  test_knapsack_solver.py  test_strategy.py
